# EdgeFollower

./: .gitignore  frames.gv
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/edge_follower/: edge_follower_node
devel/lib/pkgconfig/: edge_follower.pc
devel/share/edge_follower/cmake/: edge_followerConfig.cmake
src/edge_follower/: CMakeLists.txt  README.md  package.xml
src/edge_follower/config/: my_robot.rviz  my_world.world
src/edge_follower/env/: my_world.world  turtlebot3_burger.gazebo.xacro  turtlebot3_my_world.launch  update_gazebo_xacro.sh  yuan_zhu.world
src/edge_follower/include/edge_follower/: edge_follower.h  edge_follower_utils.h
src/edge_follower/launch/: edge_follower.launch
src/edge_follower/src/: edge_follower.cpp  edge_follower_node.cpp  edge_follower_utils.cpp
